@@ -64,7 +64,8 @@ static void runxsrc(int xsin) {
 static void usage(void) NORETURN;
 static void usage(void) {
 	eprint(
-"usage: xs [-c command] [-silevxnpo] [file [args ...]]\n"
+"usage: xs [-c command] [-silevxnpo?G] [file [args ...]]\n"
+"	-?	show usage information\n"
 "	-c cmd	execute argument\n"
 "	-s	read commands from standard input; stop option parsing\n"
 "	-i	interactive shell\n"
@@ -76,6 +77,7 @@ static void usage(void) {
 "	-p	don't load functions from the environment\n"
 "	-o	don't open stdin, stdout, and stderr if they were closed\n"
 "	-d	don't ignore SIGQUIT or SIGTERM\n"
+"	-G	run without garbage collection\n"
 	);
 	exit(1);
 }
@@ -136,7 +138,7 @@ int main(int argc, char **argv) {
 	if (argv[0][0] == '-')
 		loginshell = true;
 
-	while ((c = getopt(argc, argv, "eilxvnpodsc:?GIL")) != EOF)
+	while ((c = getopt(argc, argv, "eilxvnpodsc:?G")) != EOF)
 		switch (c) {
 #define FLAG(x, action) case x: action; break; 
 		FLAG('c', cmd = optarg);
@@ -151,6 +153,7 @@ int main(int argc, char **argv) {
 		FLAG('d', allowquit = true);
 		FLAG('s', cmd_stdin = true; goto getopt_done);
 		FLAG('G', GC_disable());
+		FLAG('?', usage());
 		default:
 			usage();
 		}
