@@ -42,6 +42,9 @@ Added a `$&build` primitive to report builder info (user, host, date, compiler).
 Provided an XS language-definition file for GNU source-highlight. See the
 comments at the top of `xs.lang` for installation instructions.
 
+Exposed the command-line options `-?` to show usage information and `-G` to
+run XS with the garbage collector disabled.
+
 xs 1.1 to xs 1.2
 ----------------
 
